assets/css/scrumboard.css
/* ... */
.w-util-text-color-green {
  color: var(--main-light-accent-color) !important;
  font-size: 20px;
}



.w-util-change-size > a {
  color: var(--main-accent-color) !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  padding: 15px 30px 15px 10px !important;
}

.w-p-30{
  padding: 30px !important;
}
.w-fw {
  font-weight: normal !important;
  font-size: 14px;
}

.w-flex {
  display: flex;
  justify-content: space-between;
  margin: 0 40px;
}

.w-flex  > p {
  font-weight: bold;
}

.w-padding {
  padding: 15px 17px !important;
}

.trip-info {
  display: flex;
  justify-content: space-between;
}

.w-block-full-width {
  display: block;
  width: 100%;
}

.w-sum {
  font-size: 18px;
  font-weight: 700;
}

